# rehabilitation-system

./: README.md
arduino/controll_3/: controll_3.ino
data/data_3/: fc1.txt  fc3.txt  grafik.txt  pos1.txt  pos3.txt  velo1.txt  velo3.txt
docs/: ARCHITECTURE.md  INTEGRATION.md  Summary.md  Test&Valid.md
firmware/src/: main.ino
include/: Config.h  ControlHandler.h  GraphManager.h
maple/: ExternalForce.mw
scripts/: clean.sh  start_all.sh
server/: CMakeLists.txt  Makefile
server/src/: main_server.cpp
server/src/config/: config.h
server/src/modbus/: ModbusServer.cpp  ModbusServer.h
server/src/serial/: SerialPort.cpp  SerialPort.h
server/src/state_machine/: StateHandlers.cpp  StateHandlers.h  StateMachine.cpp  StateMachine.h
server/src/trajectory/: TrajectoryManager.cpp  TrajectoryManager.h
src/: ControlHandler.cpp  GraphManager.cpp  StateHandlers.cpp  TrajectoryManager.cpp
